# snare-flare

./: MIDI_SYNC_PLAN.md  README.md  __init__.py  discoverer.py  drum_mapper.py  midi_handler.py  midi_sync.py  neon.py  pyproject.toml
led/: drum_mapper.py  midi_handler.py  midi_sync.py
snare_flare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
