[project]
name = "led"
version = "0.1.0"
description = "Python app to control LEDDMX-00 Bluetooth LED devices"
requires-python = ">=3.8"
dependencies = [
    "bleak>=0.21.0",
]

[project.scripts]
discoverer = "led.discoverer:cli"
neon = "led.neon:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


