[project]
name = "snare-flare"
version = "0.1.0"
description = "Real-time MIDI drum input to LED light synchronization - syncs drum hits from MIDI devices (e.g., Alesis drum kits, GarageBand) with LEDDMX-00 Bluetooth LED devices for visual drum performance effects"
requires-python = ">=3.8"
dependencies = [
    "bleak>=0.21.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.9",
]

[project.scripts]
discoverer = "discoverer:cli"
neon = "neon:cli"
midi-sync = "midi_sync:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["discoverer", "drum_mapper", "midi_handler", "midi_sync", "neon"]



